Actualizacion de librerias y funcionalidades de Java 8 para repositorio, pruebas y modelo