@@ -19,7 +19,7 @@ import org.springframework.web.bind.annotation.ExceptionHandler;
 
 import java.sql.Timestamp;
 import java.util.List;
-
+import java.util.stream.Collectors;
 
 
 @Slf4j
@@ -32,19 +32,13 @@ public class ExceptionControllerAdvice {
         return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(errorResponse);
     }
 
-    @ExceptionHandler(MethodArgumentNotValidException.class)
-    public ResponseEntity<ErrorResponse> handleValidationException(MethodArgumentNotValidException ex) {
-        log.info(ex.getBindingResult().getFieldError().getDefaultMessage());
-        //ErrorResponse errorResponse = new ErrorResponse(new Timestamp(System.currentTimeMillis()), ex.getStatusCode().value(), ex.getBindingResult().getFieldError().getDefaultMessage());
-        //return ResponseEntity.status(ex.getStatusCode().value()).body(errorResponse);
-        return null;
-    }
-
     @ExceptionHandler(ConstraintViolationException.class)
     public ResponseEntity<ErrorResponse> handleValidationException(ConstraintViolationException ex) {
-        //List messages = ex.getConstraintViolations().stream().map(ConstraintViolation::getMessage).toList();
-        List messages = null;
-                log.info(messages.toString());
+        List<String> messages = ex.getConstraintViolations()
+                .stream()
+                .map(ConstraintViolation::getMessage)
+                .collect(Collectors.toList());
+        log.info(messages.toString());
         ErrorResponse errorResponse = new ErrorResponse(new Timestamp(System.currentTimeMillis()),
                 HttpStatus.BAD_REQUEST.value(),
                 messages.toString());
